--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -12,35 +12,43 @@
                 <div class="uppercase tracking-wide text-center text-3xl text-green-600 mb-2">
                     NOHD Pharmacy Store
                 </div>
-                <p class="text-gray-700 text-sm mb-12 text-center border-t-2 border-zinc-200">
+                <p class="text-gray-700 text-sm mb-6 text-center border-b-2 border-zinc-200 p-2">
                     Inventory Management System
                 </p>
                 <div class="grid md:grid-cols-2 gap-4 text-xs uppercase">
                     <a href="{% url 'list' %}" class="w-full md:w-auto">
                         <div class="bg-cyan-600 hover:bg-white hover:text-cyan-700 hover:border hover:border-cyan-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-pills mr-2"></i>
-                            <span>Drugs</span>
+                            <span>Main store Inventory</span>
                         </div>
                     </a>
                     <a href="{% url 'record' %}" class="w-full md:w-auto">
                         <div class="bg-amber-600 hover:bg-white hover:text-amber-700 hover:border hover:border-amber-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-clipboard-list mr-2"></i>
-                            <span>Record</span>
+                            <span>Main Store Record</span>
                         </div>
                     </a>
                     <a href="{% url 'restocked' %}" class="w-full md:w-auto">
                         <div class="bg-blue-600 hover:bg-white hover:text-blue-700 hover:border hover:border-blue-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <i class="fa fa-solid fa-recycle mr-2"></i>
-                            <span>Restocking</span>
+                            <span>Main store Restocking</span>
                         </div>
                     </a>
                     <a href="{% url 'worth' %}" class="w-full md:w-auto">
                         <div class="bg-emerald-600 hover:bg-white hover:text-emerald-700 hover:border hover:border-emerald-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <span class="mr-2">&#x20A6;</span>
-                            <span>Worth</span>
+                            <span>Pharmacy Worth</span>
+                        </div>
+                    </a>                   
+                </div>
+
+                <div class="mt-6 border-t-2 p-2">
+                    <a href="{% url 'store_list' %}" class=" md:w-auto text-xs uppercase">
+                        <div class="bg-fuchsia-600 hover:bg-white hover:text-fuchsia-700 hover:border hover:border-fuchsia-600 text-white p-2 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+                            <i class="fa fa-solid fa-warehouse mr-2"></i>
+                            <span>pharmacy units</span>
                         </div>
                     </a>
-                   
                 </div>
             </div>
         </div>
