--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -4,7 +4,10 @@
 {% block content %}
     <div class="container mx-auto p-4">
         <!-- Drugs Available in Store Table -->
-        <h2 class="text-2xl text-center text-gray-800 p-2 uppercase">{{ store.name }} bulk locker</h2>
+        <span class="flex justify-center p-4 gap-4 text-xl">
+        <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+        <h2 class="text-center text-teal-700 uppercase">{{ store.name }} bulk locker</h2>
+        </span>
         <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'dispensary_record' store.id%}"
    class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
