--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -3,10 +3,10 @@
 {% block title %}{{ store.name }} - DISPENSARY LOCKER{% endblock %}
 {% block content %}
     <div class="container mx-auto p-4">
-
-
-        <h2 class="text-2xl text-center text-gray-800 p-2 uppercase">{{ store.name }} dispensary locker</h2>
-
+        <span class="flex justify-center p-4 gap-4 text-xl">
+            <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+            <h2 class="text-center text-teal-700 uppercase">{{ store.name }} dispensary locker</h2>
+            </span>
         <!-- Unit Issue Records Table -->
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
