--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -3,7 +3,10 @@
 {% block title %}{{ store.name }} - Dashboard{% endblock %}
 {% block content %}
     <div class="container mx-auto p-4">
-        <h2 class="text-2xl text-center text-gray-800 p-2 uppercase">{{ store.name }} Transfer Records</h2>
+        <span class="flex justify-center p-4 gap-4 text-xl">
+            <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+        <h2 class="text-center text-teal-700 uppercase">{{ store.name }} Transfer Records</h2>
+        </span>
         <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'unit_issue_record_create' store.id %}"
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
