worth template sorted

--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -18,7 +18,7 @@
             <div class="overflow-x-auto max-h-[65vh]">
                 <table class="min-w-full divide-y divide-gray-300">
                     <thead class="bg-stone-500">
-                        <tr class="text-sm text-center text-white uppercase">
+                        <tr class="text-xs text-center text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Drug</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Quantity</th>
