--- a/store/templates/store/worth.html
+++ b/store/templates/store/worth.html
@@ -3,62 +3,63 @@
 {% load static %}
 {% block title %}Inventory Worth{% endblock %}
 {% block content %}
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 uppercase">
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <div class="bg-gradient-to-r from-emerald-600 to-emerald-700 px-6 py-4">
-            <h3 class="text-xl font-bold text-white uppercase tracking-wider text-center">
+        <div class="bg-white px-6 py-2 border-b-2">
+            <h3 class="text-lg font-bold text-emerald-700 uppercase tracking-wider text-center">
                 Live Inventory Worth
             </h3>
-            <p class="text-emerald-100 text-sm mt-1 text-center">
-                As of <span class="bg-emerald-500 text-white text-xs px-2 py-1 rounded-full">{{ today }}</span>
+            <p class="text-emerald-100 text-xs mt-1 text-center">
+                <span class="bg-emerald-500 text-white text-xs px-2 py-1 rounded-full"> As of: {{ today }}</span>
             </p>
+                <p class="text-xs text-blue-700 text-center p-2">
+                    This values are updated in real-time based on current inventory levels and prices
+                </p>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-3 p-3">
-            <div class="bg-gradient-to-b from-white to-blue-50 p-3 rounded-lg text-center">
-                <h2 class="text-xl font-bold text-blue-600">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-3 p-4">
+            <div class="bg-blue-600 p-4 rounded-lg text-center">
+                <h2 class="text-lg font-bold text-gray-100">
                     Main Store Value
                 </h2>
-                <p class="text-xl font-bold text-blue-600 mt-2">
+                <p class="text-lg font-bold text-white mt-2">
                     &#x20A6;{{ total_store_value|floatformat:2|intcomma }}
                 </p>
             </div>
-            <div class="bg-gradient-to-b from-white to-purple-50 p-3 rounded-lg text-center">
-                <h2 class="text-xl font-bold text-purple-600">
+            <div class="bg-purple-600 p-4 rounded-lg text-center">
+                <h2 class="text-lg font-bold text-gray-100">
                     Combined Unit Stores Value
                 </h2>
-                <p class="text-xl font-bold text-purple-600 mt-2">
+                <p class="text-lg font-bold text-white mt-2">
                     &#x20A6;{{ combined_unit_value|floatformat:2|intcomma }}
                 </p>
             </div>
-            <div class="bg-gradient-to-b from-white to-indigo-50 p-3 rounded-lg text-center">
-                <h2 class="text-xl font-bold text-indigo-600">
+            <div class="bg-green-600 p-4 rounded-lg text-center">
+                <h2 class="text-lg font-bold text-gray-100">
                     Grand Total Value
                 </h2>
-                <p class="text-xl font-bold text-indigo-600 mt-2">
+                <p class="text-lg font-bold text-white mt-2">
                     &#x20A6;{{ grand_total_value|floatformat:2|intcomma }}
                 </p>
             </div>
         </div>
-        <div class="bg-gradient-to-b from-white to-cyan-50 p-3 rounded-lg">
-            <h2 class="text-xl font-bold text-cyan-600 text-center mb-4">
+        <div class="bg-white p-4 rounded-lg">
+            <h2 class="text-lg font-bold text-cyan-700 text-center mb-2 ">
                 Individual Unit Values
             </h2>
             <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 {% for unit_name, values in unit_worths.items %}
-                <li class="text-center bg-white p-4 rounded-lg shadow-sm">
-                    <h3 class="text-lg font-semibold text-cyan-700 mb-2">{{ unit_name }}</h3>
-                    <p class="text-sm text-cyan-600">bulk locker: &#x20A6;{{ values.store_value|floatformat:2|intcomma }}</p>
-                    <p class="text-sm text-cyan-600">dispensary locker: &#x20A6;{{ values.locker_value|floatformat:2|intcomma }}</p>
-                    <p class="text-lg font-bold text-cyan-600 mt-2">Total: &#x20A6;{{ values.total_value|floatformat:2|intcomma }}</p>
+                <li class="text-center bg-cyan-600 p-2 rounded-lg shadow-sm">
+                    <h3 class="text-sm font-semibold text-white mb-2">{{ unit_name }}</h3>
+                    <div class="flex justify-between border-b">
+                        <p class="text-xs text-white">bulk locker: <br> &#x20A6;{{ values.store_value|floatformat:2|intcomma }}</p>
+                        <p class="text-xs text-white">dispensary locker: <br> &#x20A6;{{ values.locker_value|floatformat:2|intcomma }}</p>                        
+                    </div>
+                    <p class="text-sm font-bold text-white mt-2">Total: &#x20A6;{{ values.total_value|floatformat:2|intcomma }}</p>
                 </li>
                 {% endfor %}
             </ul>
         </div>
-        <div class="bg-gray-50 p-3">
-            <p class="text-sm text-gray-700 text-center">
-                This value is updated in real-time based on current inventory levels and prices
-            </p>
-        </div>
+        
     </div>
 </div>
 {% endblock %}
