--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -66,6 +66,7 @@
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Selling Price</th>
                         <!-- <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Drugs Added</th> -->
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
                         <!-- <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th> -->
@@ -85,7 +86,8 @@
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supplier|default_if_none:'N/A'|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A'|upper }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.selling_price|default_if_none:'N/A' }}</td>
                         <!-- <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td> -->
                         <td class="p-3 whitespace-nowrap  text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
                         <!-- <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td> -->
