--- a/store/templates/store/store_list.html
+++ b/store/templates/store/store_list.html
@@ -12,7 +12,7 @@
             <a href="{% url 'unit_dashboard' store.pk %}" class="block">
                 <div class="bg-white rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-2 hover:scale-105">
                     <div class="p-5 text-center">
-                        <h3 class="text-xl font-semibold text-gray-800">{{ store.name }}</h3>
+                        <h3 class="text-xl text-gray-800">{{ store.name }}</h3>
                         <p class="text-sm text-gray-600 mt-2">unit</p>
                     </div>
                     <div class="bg-gradient-to-r from-green-500 to-blue-600 h-1"></div>
