--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
-{% block title %}{{ store.name }} - Dashboard{% endblock %}
+{% block title %}{{ store.name }} - DRUG TRANSFERS {% endblock %}
 {% block content %}
     <div class="container mx-auto p-4">
         <span class="flex justify-center p-4 gap-4 text-xl">
@@ -20,11 +20,12 @@
                     <thead class="bg-stone-500">
                         <tr class="text-xs text-center text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Drug</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Quantity</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Issued To</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Issued</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Remarks</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Update</th>
                         </tr>
                     </thead>
@@ -33,12 +34,13 @@
                         <tr class="{% cycle 'bg-white' 'bg-stone-50' %} text-xs text-center">
                             <td class="px-4 py-2 text-gray-700">{{ forloop.counter }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.strength|default_if_none:'N/A'|upper }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.trade_name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.quantity|default_if_none:''|upper }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.issued_to.name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.date_issued|date:"d-M-Y" }}</td>
-                            <td class="px-4 py-2 text-gray-700">{{ r.remark|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 text-center">
-                                <a href="{% url 'unit_issue_record_update' r.id %}" class="text-stone-700 hover:text-stone-900">
+                                <a href="{% url 'transfer_update' r.id %}" class="text-stone-700 hover:text-stone-900">
                                     <i class="fas fa-edit fa-lg"></i>
                                 </a>
                             </td>
@@ -78,8 +80,5 @@
             </div>
         </div>
 
-        <p class="mt-4 text-sm text-gray-600">
-            <a href="{% url 'unit_dashboard' store.pk%}" class="text-stone-600 hover:text-stone-800">Go Back</a>
-        </p>
     </div>
 {% endblock %}
