--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -49,7 +49,21 @@
                             <span>pharmacy units</span>
                         </div>
                     </a>
+                    <div class="relative mt-4">
+                        <a href="{% url 'expiry_notification' %}" class="md:w-auto text-xs uppercase">
+                            <div class="bg-white hover:bg-rose-600 hover:text-white border border-rose-700 hover:border hover:border-rose-600 text-rose-700 p-3 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+                                <i class="fa fa-solid fa-warning mr-2"></i>
+                                <span>drug expiry notification</span>
+                            </div>
+                        </a>
+                        {% if expiring_drugs_count > 0 %}
+                            <span class="absolute -top-2 -right-2 bg-blue-500 text-white hover:bg-white hover:border border-blue-700 hover:text-blue-700 text-sm font-bold rounded-full h-10 w-10 flex items-center justify-center">
+                                {{ expiring_drugs_count }}
+                            </span>
+                        {% endif %}
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
