--- a/store/templates/store/store_list.html
+++ b/store/templates/store/store_list.html
@@ -3,16 +3,16 @@
 {% block title %}Unit Stores{% endblock %}
 {% block content %}
 <div class="container mx-auto p-4">
-    <div class="bg-gray-50 rounded-lg shadow-2xl overflow-hidden mt-6">
-        <div class="bg-gradient-to-r from-cyan-600 to-emerald-600 p-4 text-center">
+    <div class="bg-gray-50 rounded-lg shadow-xl overflow-hidden mt-6">
+        <div class="bg-gradient-to-r from-cyan-500 to-emerald-500 p-4 text-center">
             <span class="text-lg font-bold text-white uppercase tracking-wider">Unit Stores</span>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-8 p-6 justify-center">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-8 p-6 justify-center">
             {% for store in stores %}
             <a href="{% url 'unit_dashboard' store.pk %}" class="block">
                 <div class="bg-white rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-2 hover:scale-105">
                     <div class="p-5 text-center">
-                        <h3 class="text-xl text-gray-800">{{ store.name }}</h3>
+                        <h3 class="text-xl text-gray-700">{{ store.name }}</h3>
                         <p class="text-sm text-gray-600 mt-2">unit</p>
                     </div>
                     <div class="bg-gradient-to-r from-green-500 to-blue-600 h-1"></div>
