--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -7,7 +7,17 @@
             <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
             <h2 class="text-center text-teal-700 uppercase">{{ store.name }} dispensary locker</h2>
         </span>
-        <h3 class="text-lg uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
+        <div class="flex justify-between items-center m-2 space-x-2">
+            <h3 class="text-lg uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
+            <a href="{% url 'dispense' store.dispensary_locker.id %}"
+               class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-fuchsia-600 hover:bg-fuchsia-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-fuchsia-500">
+                <i class="fas fa-plus mr-2"></i> Dispense
+            </a>
+            <a href="{% url 'dispensed_list' store.dispensary_locker.id %}"
+               class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
+                <i class="fas fa-plus mr-2"></i> Dispensary record
+            </a>
+    </div>
         <!-- Unit Issue Records Table -->
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
