--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -15,7 +15,7 @@
             </a>
             <a href="{% url 'dispensed_list' store.dispensary_locker.id %}"
                class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
-                <i class="fas fa-plus mr-2"></i> Dispensary record
+                <i class="fas fa-file-archive mr-2 fa-2xl"></i> Dispensary record
             </a>
     </div>
         <!-- Unit Issue Records Table -->
