--- a/store/templates/store/unitissuerecord_form.html
+++ b/store/templates/store/unitissuerecord_form.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
-{% block title %}DRUG TRANSFER FORM{% endblock %}
+{% block title %}{{ unit }} | DRUG TRANSFER{% endblock %}
 {% block content %}
-<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <h1 class="text-sm font-bold text-white uppercase tracking-wider text-center">
-            DRUG TRANSFER FORM
-        </h1>
+        <span class="flex justify-center p-4 gap-4 text-xl">
+            {% if unit %}
+            <a href="{% url 'unit_transfer' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
+            <h2 class="text-center text-teal-700 uppercase">{{ unit }} BULK LOCKER TO OTHER UNIT TRANSFER FORM</h2>
+        {% endif %}
+        </span>
         {% if messages %}
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
             {% for message in messages %}
@@ -13,7 +16,7 @@
             {% endfor %}
         </div>
         {% endif %}
-        <form method="post" class="bg-white p-6 rounded-lg shadow-md">
+        <form method="post" class="bg-white p-6 rounded-lg shadow-md uppercase">
             {% csrf_token %}
             {{ formset.management_form }}
             {% for form in formset %}
@@ -23,7 +26,7 @@
                     {{ form.non_field_errors }}
                 </div>
                 {% endif %}
-                <div class="grid grid-cols-1 gap-2 md:grid-cols-3 border-t p-2">
+                <div class="grid grid-cols-1 gap-10 md:grid-cols-5 border-t p-2">
                     {% for field in form.visible_fields %}
                     <div class="space-y-1">
                         <label class="block text-xs font-medium text-gray-700">{{ field.label }}</label>
